--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,15 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "barryvdh/laravel-debugbar": "^2.0"
     },
     "autoload": {
         "classmap": [
             "database"
+        ],
+        "files": [
+            "app/helpers.php"
         ],
         "psr-4": {
             "App\\": "app/"
