--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
-DB_DATABASE=homestead
+DB_DATABASE=trust-list-eraser
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -17,3 +17,10 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+CUCM_AXL_WSDL=/storage/app/axl/schema/8.5/AXLAPI.wsdl
+CUCM_AXL_LOCATION=https://192.168.1.120:8443/axl/
+CUCM_SXML_WSDL=/storage/app/sxml/schema/RISAPI.wsdl
+CUCM_SXML_LOCATION=https://192.168.1.120:8443/realtimeservice/services/RisPort
+CUCM_LOGIN=User
+CUCM_PASS=Password
