--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "bestmomo/scafold": "dev-master"
+        "bestmomo/scafold": "dev-master",
+        "guzzlehttp/guzzle": "^6.0@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
