--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+CUCM_AXL_LOCATION=https://your.cucm.ip.address:8443/axl/
+CUCM_SXML_LOCATION=https://your.cucm.ip.address:8443/realtimeservice/services/RisPort/
+CUCM_LOGIN=admin
+CUCM_PASS=password
