add failure reason code

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "guzzlehttp/guzzle": "^6.0@dev",
-        "laracasts/flash": "dev-master"
+        "laracasts/flash": "dev-master",
+        "sabre/xml": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
